第一版结束

--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
                 </a>
                 <div style="display: none;">展开</div>
             </div>
-            <span>up多罗西123</span>
+            <span class="text-[#61666D]">up多罗西123</span>
         </div>
         <div class="test h-[240px] rounded-[6px]">
             <a href="">
@@ -959,7 +959,7 @@
                 </a>
                 <div style="display: none;">展开</div>
             </div>
-            <span>up多罗西123</span>
+            <span class="text-[#61666D]">up多罗西123</span>
         </div>
         <div class="test h-[240px] rounded-[6px]"><a href="">
                 <img src="./img/多罗西新书.jpg" class="rounded-md"> </a>
@@ -969,7 +969,7 @@
                 </a>
                 <div style="display: none;">展开</div>
             </div>
-            <span>up多罗西123</span>
+            <span class="text-[#61666D]">up多罗西123</span>
         </div>
         <div class="test h-[240px] rounded-[6px]"><a href="">
                 <img src="./img/多罗西新书.jpg" class="rounded-md"> </a>
@@ -979,7 +979,7 @@
                 </a>
                 <div style="display: none;">展开</div>
             </div>
-            <span>up多罗西123</span>
+            <span class="text-[#61666D]">up多罗西123</span>
         </div>
         <div class="test h-[240px] rounded-[6px]"><a href="">
                 <img src="./img/多罗西新书.jpg" class="rounded-md"> </a>
@@ -989,7 +989,7 @@
                 </a>
                 <div style="display: none;">展开</div>
             </div>
-            <span>up多罗西123</span>
+            <span class="text-[#61666D]">up多罗西123</span>
         </div>
         <div class="test h-[240px] rounded-[6px]"><a href="">
                 <img src="./img/多罗西新书.jpg" class="rounded-md"> </a>
@@ -999,7 +999,7 @@
                 </a>
                 <div style="display: none;">展开</div>
             </div>
-            <span>up多罗西123</span>
+            <span class="text-[#61666D]">up多罗西123</span>
         </div>
 
 
@@ -1013,7 +1013,7 @@
                 </a>
                 <div style="display: none;">展开</div>
             </div>
-            <span>up多罗西123</span>
+            <span class="text-[#61666D]">up多罗西123</span>
         </div>
         <div class="blbl-vedio">
             <a href="">
@@ -1024,7 +1024,7 @@
                 </a>
                 <div style="display: none;">展开</div>
             </div>
-            <span>up多罗西123</span>
+            <span class="text-[#61666D]">up多罗西123</span>
         </div>
         <div class="blbl-vedio">
             <a href="">
@@ -1035,7 +1035,7 @@
                 </a>
                 <div style="display: none;">展开</div>
             </div>
-            <span>up多罗西123</span>
+            <span class="text-[#61666D]">up多罗西123</span>
         </div>
         <div class="blbl-vedio">
             <a href="">
@@ -1046,7 +1046,7 @@
                 </a>
                 <div style="display: none;">展开</div>
             </div>
-            <span>up多罗西123</span>
+            <span class="text-[#61666D]">up多罗西123</span>
         </div>
         <div class="blbl-vedio">
             <a href="">
@@ -1057,7 +1057,7 @@
                 </a>
                 <div style="display: none;">展开</div>
             </div>
-            <span>up多罗西123</span>
+            <span class="text-[#61666D]">up多罗西123</span>
         </div>
 
     </div>
@@ -1402,7 +1402,7 @@
                                         </a>
                                         <div style="display: none;">展开</div>
                                     </div>
-                                    <span>${data[j].upName}</span>`;
+                                    <span class="text-[#61666D]">${data[j].upName}</span>`;
                                 //再把这个插入
 
                                 grid.append(divTest);
@@ -1450,7 +1450,7 @@
                             <div style="display: none;">展开</div>
                             </div>
 
-                            <span>up${data[j].upName}</span>
+                            <span class="text-[#61666D]">up${data[j].upName}</span>
                             `;
 
                         }
